[package]
name = "routingkit-cch"
version = "0.1.0"
edition = "2024"
description = "Rust bindings for RoutingKit's Customizable Contraction Hierarchies (CCH)"
license = "BSD-2-Clause"
repository = "https://github.com/HellOwhatAs/RoutingKit-cch"


[dependencies]
cxx = "1"

[build-dependencies]
cxx-build = "1"

[dev-dependencies]
rayon = "1"
