[package]
name = "routingkit-cch"
version = "0.1.1"
edition = "2024"
description = "Rust bindings for RoutingKit's Customizable Contraction Hierarchies (CCH)"
license = "BSD-2-Clause"
repository = "https://github.com/HellOwhatAs/RoutingKit-cch"


[dependencies]
cxx = "1"
shapefile = "0.7"

[build-dependencies]
cxx-build = "1"
cc = "1.0"

[dev-dependencies]
rayon = "1"
pathfinding = "4"
rand = "0.8"
indicatif = { version = "0.18.0", features = ["rayon"] }
serde-pickle = "1.1"
